--- a/DBADashGUI/Properties/Resources.resx
+++ b/DBADashGUI/Properties/Resources.resx
@@ -271,4 +271,7 @@
   <data name="SQLScript_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SQLScript_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Percentage_16x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Percentage_16x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
